// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set password screen component renders correctly 1`] = `
"<View style={{...}}>
  <View style={{...}}>
    <withTheme(TextComponent) darker={true} style={{...}}>
      10 or more characters long, at least 1 number, 1 lowercase character and UPPERCASE character.
    </withTheme(TextComponent)>
    <View style={{...}}>
      <TextInput testID=\\"input-password\\" style={{...}} placeholderTextColor=\\"#9a9a9a\\" placeholder=\\"password\\" autoCapitalize=\\"none\\" autoCorrect={false} selectionColor=\\"#00DAFF\\" secureTextEntry={true} value=\\"\\" onChangeText={[Function: onChangeText]} allowFontScaling={true} rejectResponderTermination={true} underlineColorAndroid=\\"transparent\\" />
      <TouchableHighlight testID=\\"reveal-password\\" onPress={[Function: onPress]} activeOpacity={0.85} delayPressOut={100} underlayColor=\\"black\\">
        <Icon name=\\"view-off\\" size={18} style={{...}} allowFontScaling={false} />
      </TouchableHighlight>
    </View>
    <View style={{...}}>
      <TextInput testID=\\"input-confirm-password\\" style={{...}} placeholderTextColor=\\"#9a9a9a\\" placeholder=\\"confirm password\\" autoCapitalize=\\"none\\" autoCorrect={false} selectionColor=\\"#00DAFF\\" secureTextEntry={true} value=\\"\\" onChangeText={[Function: onChangeText]} allowFontScaling={true} rejectResponderTermination={true} underlineColorAndroid=\\"transparent\\" />
      <TouchableHighlight testID=\\"reveal-confirm-password\\" onPress={[Function: onPress]} activeOpacity={0.85} delayPressOut={100} underlayColor=\\"black\\">
        <Icon name=\\"view-off\\" size={18} style={{...}} allowFontScaling={false} />
      </TouchableHighlight>
    </View>
  </View>
  <View style={{...}}>
    <withTheme(ButtonComponent) testID=\\"button-understand\\" style={{...}} primary={true} onPress={[Function: onPress]}>
      Secure
    </withTheme(ButtonComponent)>
  </View>
</View>"
`;

exports[`set password screen component sets password correctly 1`] = `
"<View style={{...}}>
  <View style={{...}}>
    <withTheme(TextComponent) darker={true} style={{...}}>
      10 or more characters long, at least 1 number, 1 lowercase character and UPPERCASE character.
    </withTheme(TextComponent)>
    <View style={{...}}>
      <TextInput testID=\\"input-password\\" style={{...}} placeholderTextColor=\\"#9a9a9a\\" placeholder=\\"password\\" autoCapitalize=\\"none\\" autoCorrect={false} selectionColor=\\"#00DAFF\\" secureTextEntry={false} value=\\"pass1\\" onChangeText={[Function: onChangeText]} allowFontScaling={true} rejectResponderTermination={true} underlineColorAndroid=\\"transparent\\" />
      <TouchableHighlight testID=\\"reveal-password\\" onPress={[Function: onPress]} activeOpacity={0.85} delayPressOut={100} underlayColor=\\"black\\">
        <Icon name=\\"view-1\\" size={18} style={{...}} allowFontScaling={false} />
      </TouchableHighlight>
    </View>
    <View style={{...}}>
      <TextInput testID=\\"input-confirm-password\\" style={{...}} placeholderTextColor=\\"#9a9a9a\\" placeholder=\\"confirm password\\" autoCapitalize=\\"none\\" autoCorrect={false} selectionColor=\\"#00DAFF\\" secureTextEntry={false} value=\\"pass1\\" onChangeText={[Function: onChangeText]} allowFontScaling={true} rejectResponderTermination={true} underlineColorAndroid=\\"transparent\\" />
      <TouchableHighlight testID=\\"reveal-confirm-password\\" onPress={[Function: onPress]} activeOpacity={0.85} delayPressOut={100} underlayColor=\\"black\\">
        <Icon name=\\"view-1\\" size={18} style={{...}} allowFontScaling={false} />
      </TouchableHighlight>
    </View>
  </View>
  <View style={{...}}>
    <withTheme(ButtonComponent) testID=\\"button-understand\\" style={{...}} primary={true} onPress={[Function: onPress]}>
      Secure
    </withTheme(ButtonComponent)>
  </View>
</View>"
`;
